[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = {version = "0.7.5",features=["macros"]}
fred = {version = "9.2.1",features=["serde-json"]}
serde = "1.0.210"
serde_json = "1.0.128"
time = {version= "0.3.36",features=["macros","parsing"]}
tokio = {version = "1.40.0", features = ["rt-multi-thread"]}
tracing-subscriber = "0.3.18"
yahoo_finance_api = "2.2.1"
